--- a/src/styles.css/style.css
+++ b/src/styles.css/style.css
@@ -59,7 +59,7 @@ h6 {
 }
 /*   NAV   */
 /*=======================================================*/
-header {
+.header {
   background: url(../img/PlanBan.png) center/cover no-repeat;
   min-height: 100vh;
   width: 100vw;
