--- a/src/styles.css/style.css
+++ b/src/styles.css/style.css
@@ -1,244 +1,196 @@
-/*    CORE STYLE    */
+/*   HEADER    */
 /*=======================================================*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-}
-html {
-  line-height: 1.15;
-  -webkit-text-size-adjust: 100%;
-}
-
-:root {
-  --color-txt: #0c2c39;
-  --background-color: #e5e5dc;
-  --primary-color: #26495c;
-  --title-color: #c66b3d;
-  --elementDecoration-color: #c4a35a;
-  --menuText-color: #c66b3d;
-  --five-BG-color: #707070;
-
-  /*  */
-}
-/*   GLOBAL   */
-/*=======================================================*/
-body {
+.banner {
   display: block;
-  margin: auto;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: var(--color-txt);
-}
-h1 {
-  font-size: 3.2rem; /* == 51,2 px*/
-  font-family: "Abril Fatface", cursive;
-}
-h2 {
-  font-size: 2.8rem; /* == 44.8px */
-}
-h3 {
-  font-size: 2.8rem; /* == 38.4 px */
-}
-h4 {
-  font-size: 2rem; /* == 32px */
-}
-h5 {
-  font-size: 1.8rem; /* == 28.8px */
-}
-h6 {
-  font-size: 1.6rem; /* 25.6px */
-}
-/*   NAV   */
-/*=======================================================*/
-.header {
-  background: url(../img/PlanBan.png) center/cover no-repeat;
-  min-height: 100vh;
-  width: 100vw;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100vw;
-  min-height: 4.5rem;
-  background-color: transparent;
-  font-family: "Roboto Condensed", sans-serif;
-  text-transform: uppercase;
-}
-.logo {
-  cursor: pointer;
-  color: blue;
-  letter-spacing: 5px;
-  margin-left: 10vw;
-}
-.nav-links {
-  display: flex;
-  justify-content: space-around;
-  width: 45%;
-  margin-right: 5vw;
-  padding: 0.859rem;
-}
-.current .nav-links {
-  border-bottom: solid 2px var(--elementDecoration-color);
-}
-
-.nav-links a {
-  color: var(--color-txt);
-  letter-spacing: 3px;
-  font-weight: 400; /*vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv*/
-  font-size: 1rem;
-}
-.nav-links a:hover {
-  color: var(--elementDecoration-color);
-}
-.burger {
-  display: none;
-  cursor: pointer;
-}
-.burger div {
-  background-color: var(--color-txt);
-  width: 1.88rem;
-  height: 0.312rem;
-  margin: 0.312rem;
-}
-/*   HEADER   */
-/*=======================================================*/
-.title-fives {
-  /* display: flex; */ /* si temps , faire les puces de navigation */
-  position: absolute;
-
-  top: 30%;
-  bottom: 50%;
-}
-.fives-bg {
-  font-family: "Abril Fatface", cursive;
-  font-size: 18.625rem;
-  letter-spacing: 6.25rem;
-  margin-left: 1.33rem;
-  color: var(--five-BG-color);
-  opacity: 9%;
-}
-.title-fives h1 {
-  display: flex;
-
-  margin-left: 3vw;
-  font-size: 9vw;
-  letter-spacing: 1.5rem;
-  line-height: 15.43rem;
-}
-.title-fives p {
-  font-family: "Abril Fatface", cursive;
-  margin-left: 3vw;
-  font-size: 1.8vw;
-  letter-spacing: 0.07em;
-  line-height: 3.23rem;
-  max-width: 30vw;
-}
-.title-fives span {
-  color: var(--menuText-color);
-  font-weight: bold;
-}
-
-/* 
-.fives-bg span {
-  font-family: "Abril Fatface", cursive;
-  font-size: 18.625rem;
-  letter-spacing: 1.5rem;
-  margin-left: 1.33rem;
-  color: var(--five-BG-color);
-  opacity: 9%;
-}
-.title-fives {
-  position: absolute;
-  top: 50%;
-  bottom: 50%;
-}
-.title-fives h1 {
-  margin-left: 100px;
-  font-size: 11.437rem;
-} */
-
-/*
-
-
-/* 
-
-.title-header {
-  z-index: 101;
-}
-.title-header h1 {
-  font-size: 11.437rem;
-  color: var(--color-txt);
-  letter-spacing: 1.5rem;
-  padding: 40px;
-} */
-/* .title-header p {
-} */
-
-/*
-.img-right {
-  background: url(../img/appleDev.png) right/cover no-repeat;
-  position: absolute;
+  background: url("../img/PngItem_1832355.png") no-repeat,
+    url("../img/devop.png") no-repeat, url("../img/pngegg\ \(6\).png") no-repeat;
+  background-position: bottom right, left top 10%, left top;
   background-size: contain;
-  height: 100vh;
+  height: 92vh;
+}
+.banner div {
+  display: flex;
+  flex-direction: column;
+  padding: 5rem 0 5rem 0;
+  font-family: "Abril Fatface", cursive;
+  letter-spacing: 0.254rem;
+  margin: 0 5rem 0 5rem;
+  width: 70vmin;
+  height: 30vmin;
+}
+.banner h1 {
+  letter-spacing: 2.1rem;
+  font-size: clamp(5rem, 10vw, 20rem);
+  line-height: 1.6;
+}
+.banner p {
+  font-size: clamp(1.8rem, 3vw, 2rem);
+}
+.banner span {
+  color: var(--elementDecoration-color);
+  font-weight: 700;
+}
+
+/*   SECTION 1   */
+/*=======================================================*/
+section {
+  display: block;
+  padding: 3rem 0 0 0;
+}
+.bloc {
+  display: flex;
+  align-items: center;
+  min-height: 75vh;
+}
+
+.img-left {
+  background: url(../img/us.jpg) center/cover no-repeat,
+    linear-gradient(
+      rgba(196, 163, 90, 0.21) 0%,
+      rgba(195, 162, 89, 0.21) 56.82%,
+      rgba(98, 82, 45, 0.21) 100%
+    );
+  min-height: 70vh;
+  width: 30vw;
+}
+
+.bloc-txt {
+  /* max-width: 70%; */
+  margin: 0rem 1rem 0 8rem;
+  width: 100vmin;
+}
+
+.bloc-txt span {
+  padding: 2rem;
+}
+.bloc-txt h2 {
+  font-size: clamp(2.3rem, 5vw, 3rem);
+  margin-bottom: 10vh;
+}
+
+.bloc-txt p {
+  display: block;
+  font-size: clamp(1.4rem, 2vw, 3rem);
+  /* width: 80%;  */
+  line-height: 2.3rem;
+  margin: 1rem 0 1rem 0;
+}
+button {
+  margin: 1.8rem;
+  background-color: var(--elementDecoration-color);
+  border-radius: 10%;
+  color: (--background-color);
+  padding: 0.854rem;
+  width: 20%;
+}
+/*   SECTION 2   */
+/*=======================================================*/
+section h2 {
+  text-align: center;
+}
+.bloc-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr 10fr;
+  grid-column-gap: 0;
+  grid-row-gap: 0.3125rem;
+  align-items: center;
+}
+
+.bloc-2 h2 {
+  grid-area: 1 / 1 / 2 / 3;
+  font-size: clamp(2.3rem, 5vw, 3rem);
+}
+.bloc-2 div:first-child {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.bloc-ico {
+  grid-area: 2 / 2 / 3 / 3;
+}
+.our-job {
+  text-align: center;
+  padding: 2rem;
+  justify-content: space-evenly;
+}
+.flex-ico {
+  display: flex;
+  align-items: center;
+}
+.flex-ico img {
+  margin: 2.5rem;
+}
+.ico2 {
+  margin-left: 3.684rem;
+}
+.ico3 {
+  margin-left: 3.684rem;
+}
+/*   SECTION 3   */
+/* ======================================================= */
+.parallax {
+  background: url(../img/clock.png) center/cover no-repeat;
+  background-attachment: fixed;
+  height: 70vh;
+}
+.overlay {
+  display: table-cell;
+  vertical-align: middle;
+  background-color: rgba(80, 78, 78, 0.568);
+  height: 70vh;
   width: 100vw;
-  z-index: 100;
-} */
-/*======================================================*/
-/* RESPONSIVE */
-
-@media screen and (max-width: 1080px) {
-  .nav-links {
-    width: 60%;
-  }
 }
-@media screen and (max-width: 800px) {
-  body {
-    overflow-y: hidden;
+.parallax h2 {
+  font-family: "Amita", cursive;
+  color: var(--overlay-txt-color);
+  letter-spacing: 0.232;
+  font-size: clamp(2.3rem, 5vw, 3rem);
+  margin: 0 0.854rem 0 0.854rem;
+}
+
+/*=======================================================*/
+/*============  RESPONSIVE  ================*/
+/*=======================================================*/
+/* @custom-media --mobile(max-width: 768px); */
+
+@media screen and (max-width: 768px) {
+  section {
+    padding: 0;
   }
-  .nav-links {
-    position: absolute;
-    z-index: 1000;
-    left: 0px;
-    height: 92vh;
-    top: 10vh;
-    background-color: var(--secondary-color);
-    display: flex;
+  .banner {
+    max-height: 75vh;
+  }
+  .bloc {
+    color: var(--overlay-txt-color);
     flex-direction: column;
-    align-items: center;
-    width: 60%;
-    transform: translateY(100%);
-    transition: transform 0.7s ease-in;
+    text-align: center;
+    margin: 0.125rem;
   }
-  .nav-links li {
-    opacity: 1;
+  .bloc h2 {
+    margin: 3.75rem 0 3.85rem 0;
+    color: var(--overlay-txt-color);
   }
-  .burger {
-    display: block;
-    margin: 0 3vw;
+  .bloc-txt {
+    margin: 0 3.75rem 0 3.75rem;
+    padding: 0 1rem 0 1rem;
+    background: var(--overlay-txt-img);
+    height: 70vh;
   }
-}
-.nav-active {
-  transform: translateY(0);
-}
+  .bloc-txt p {
+    margin-top: 2.4rem;
+  }
+  .bloc span {
+    display: none;
+  }
 
-@keyframes navLinkFade {
-  from {
-    opacity: 0;
-    transform: translateY(60px);
+  .bloc .img-left {
+    position: absolute;
+    z-index: -20;
+    width: 100vmin;
+
+    height: 70vh;
   }
-  to {
-    opacity: 1;
-    transform: translateY(0px);
+
+  .bloc-2 {
+    display: block;
   }
 }
