--- a/src/styles.css/coreStyles.css
+++ b/src/styles.css/coreStyles.css
@@ -12,7 +12,7 @@
   --color-txt: #0c2c39;
   --overlay-txt-img: #0c2c39b2;
   --overlay-txt-color: #e5e5dc;
-  --background-color: #e5e5dc;
+  --background-color: #f1f1ef;
   --primary-color: #26495c;
   --title-color: #c66b3d;
   --elementDecoration-color: #c4a35a;
@@ -52,9 +52,12 @@ h4 {
   font-size: 2rem; /* == 32px */
 }
 h5 {
+  font-family: "Abril Fatface", cursive;
   font-size: 1.8rem; /* == 28.8px */
 }
 h6 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: bold;
   font-size: 1.6rem; /* 25.6px */
 }
 p {
@@ -128,7 +131,18 @@ nav {
   height: 0.437rem;
   border-radius: 0.5625rem;
 }
-
+/*=======================================================*/
+/*   FOOTER   */
+/*=======================================================*/
+footer {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  color: var(--background-color);
+  background-color: var(--color-txt);
+  height: 7rem;
+  width: 100vmax;
+}
 /*=======================================================*/
 @media screen and (max-width: 1024px) {
   .nav-links {
@@ -149,11 +163,12 @@ nav {
     flex-direction: column;
     align-items: center;
     right: 0;
-    height: 92vh;
+    height: 100vh;
     top: 0;
     width: 60%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    z-index: 2;
   }
   .nav-links a {
     text-transform: uppercase;
@@ -166,6 +181,7 @@ nav {
     flex-direction: column;
     align-items: flex-end;
     margin-right: 0.995rem;
+    z-index: 3;
   }
 }
 .nav-open {
