--- a/src/styles.css/style.css
+++ b/src/styles.css/style.css
@@ -77,11 +77,12 @@ section {
 }
 button {
   margin: 1.8rem;
-  background-color: var(--elementDecoration-color);
+  background-color: transparent;
   border-radius: 10%;
-  color: (--background-color);
+  border-color: var(--elementDecoration-color);
   padding: 0.854rem;
   width: 20%;
+  cursor: pointer;
 }
 /*   SECTION 2   */
 /*=======================================================*/
@@ -93,32 +94,48 @@ section h2 {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr 10fr;
   grid-column-gap: 0;
-  grid-row-gap: 0.3125rem;
+  grid-row-gap: 0.2rem;
   align-items: center;
+  margin: 0 1rem 0 1rem;
 }
 
 .bloc-2 h2 {
   grid-area: 1 / 1 / 2 / 3;
   font-size: clamp(2.3rem, 5vw, 3rem);
+  text-align: start;
+  padding: auto;
 }
 .bloc-2 div:first-child {
-  grid-area: 2 / 1 / 3 / 2;
+  grid-area: 4 / 1 / 3 / 2;
 }
 .bloc-ico {
   grid-area: 2 / 2 / 3 / 3;
 }
-.our-job {
+.bloc-2 div:nth-child(4) {
+  grid-area: 3 / 1 / 4 / 3;
   text-align: center;
-  padding: 2rem;
-  justify-content: space-evenly;
 }
+.our-job {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 2rem;
+}
+.our-job p {
+  margin: 1.25rem 0 1.25rem 0;
+}
+
 .flex-ico {
   display: flex;
   align-items: center;
 }
 .flex-ico img {
-  margin: 2.5rem;
+  margin: 1.8rem;
 }
+/* .ico1 {
+  animation: move 3s;
+  -webkit-animation: move 3s;
+} */
 .ico2 {
   margin-left: 3.684rem;
 }
@@ -132,19 +149,67 @@ section h2 {
   background-attachment: fixed;
   height: 70vh;
 }
-.overlay {
-  display: table-cell;
-  vertical-align: middle;
-  background-color: rgba(80, 78, 78, 0.568);
-  height: 70vh;
-  width: 100vw;
-}
+
 .parallax h2 {
   font-family: "Amita", cursive;
   color: var(--overlay-txt-color);
   letter-spacing: 0.232;
   font-size: clamp(2.3rem, 5vw, 3rem);
   margin: 0 0.854rem 0 0.854rem;
+}
+#goIn {
+  display: table-cell;
+  vertical-align: middle;
+  background-color: rgba(80, 78, 78, 0.568);
+  height: 70vh;
+  width: 100vw;
+
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  opacity: 0;
+  transition: 4s;
+}
+/*   SECTION 4 COMMUNITY   */
+/* ======================================================= */
+body section:nth-child(5) {
+  padding: 0;
+  /* display: flex;
+  align-items: center; */
+}
+.glass-background {
+  height: 80vh;
+  width: 100vw;
+  background-color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* ======================================================= */
+/* ======================================================= */
+
+/*  CONTACT  */
+/* ======================================================= */
+
+.bloc-contact {
+  background: url(../img/halftone-light.png) center/cover no-repeat;
+  display: block;
+  text-align: center;
+  height: 30vh;
+  width: 100vw;
+}
+.bloc-contact h3 {
+  margin-top: 5.75rem;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+}
+.btn button {
+  margin: 5rem;
+  padding: 1.4rem 3rem;
+  border: 1px solid var(--elementDecoration-color);
 }
 
 /*=======================================================*/
@@ -192,5 +257,38 @@ section h2 {
 
   .bloc-2 {
     display: block;
+  }
+}
+
+/*   ANIMATION FIVES HEADER   */
+/* ======================================================= */
+.slideInLeft {
+  -webkit-animation-name: slideInLeft;
+  animation-name: slideInLeft;
+  -webkit-animation-duration: 1.5s;
+  animation-duration: 1.5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+@-webkit-keyframes slideInLeft {
+  0% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+  }
+}
+@keyframes slideInLeft {
+  0% {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
   }
 }
