--- a/src/styles.css/communauté.css
+++ b/src/styles.css/communauté.css
@@ -87,8 +87,8 @@ input,
   align-items: center;
   min-width: 20vw;
   max-width: 25vw;
-  min-height: 50vh;
-  max-height: 60vh;
+  min-height: 55vh;
+  max-height: 65vh;
   background-color: #26495c;
   border-radius: 0.625rem;
   padding: 1rem;
@@ -96,9 +96,12 @@ input,
   border: 0.25rem solid #000000;
 }
 
-/*.UserCard:hover {
-  box-shadow: 5px 5px 15px 5px #000000;
-}*/
+.content ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 0.4rem;
+}
 
 .UserCard img {
   object-fit: contain;
