--- a/src/styles.css/coreStyles.css
+++ b/src/styles.css/coreStyles.css
@@ -18,6 +18,7 @@
   --elementDecoration-color: #c4a35a;
   --menuText-color: #c66b3d;
   --five-BG-color: #707070;
+  --background-card-color: #c66b3d;
 }
 
 /*   GLOBAL   */
@@ -62,7 +63,7 @@ h6 {
 }
 p {
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 1.8rem;
+  font-size: clamp(1.5rem, 2vw, 2rem);
 }
 
 /*font-family: 'Abril Fatface', cursive;
@@ -71,6 +72,7 @@ font-family: 'Roboto Condensed', sans-serif;*/
 
 /*   NAVIGATION   */
 /*=======================================================*/
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -131,6 +133,7 @@ nav {
   height: 0.437rem;
   border-radius: 0.5625rem;
 }
+
 /*=======================================================*/
 /*   FOOTER   */
 /*=======================================================*/
@@ -140,7 +143,7 @@ footer {
   text-align: center;
   color: var(--background-color);
   background-color: var(--color-txt);
-  height: 7rem;
+  height: 8vh;
   width: 100vmax;
 }
 /*=======================================================*/
