--- a/src/styles.css/presentation.css
+++ b/src/styles.css/presentation.css
@@ -14,15 +14,13 @@ body {
 /*   CONTAIN   */
 /* ======================================================= */
 .banner-presentation {
-  grid-area: 1 / 1 / 2 / 3;
+  grid-area: 1 / 1 / 1 / 3;
   display: flex;
   align-items: center;
-  background: url(../img/bannerPre.jpg);
+  background: url(../img/bannerPre.jpg) center/cover no-repeat;
   background-size: 100vw;
   background-position: 70% 50%;
   height: 50vh;
-  width: 100%;
-  margin: auto;
 }
 .presentation {
   grid-area: 2 / 1 / 4 / 2;
@@ -33,7 +31,14 @@ body {
   letter-spacing: 0.432rem;
 }
 p {
-  margin-top: 0.625rem;
+  font-size: clamp(1.4rem, 2vw, 3rem);
+  margin: 0.625rem 0 0.625rem 1.867rem;
+}
+h2 {
+  font-size: clamp(3rem, 3.2vw, 5rem);
+}
+h6 {
+  font-size: clamp(2rem, 3vw, 2.5rem);
 }
 .banner-presentation span {
   color: rgb(197, 60, 60);
