--- a/src/styles.css/aboutStyle.css
+++ b/src/styles.css/aboutStyle.css
@@ -1,12 +1,26 @@
 /*Partie about Rafael*/
-
+body{
+  
+}
+.light {
+  height: 27rem;
+  left: 5%;
+  position: absolute;
+  top: 0.125rem;
+  width: 90%;
+  z-index: 2;
+  opacity: 0;
+  transition: opacity 0.8s;
+  max-width: 100%;
+}
 .presentation {
   display: flex;
   justify-content: space-evenly;
   flex-direction: column;
   width: 100%;
-  background-color: var(--background-color);
   background-image: url("../img/node2.png");
+  background-size: cover;
+  background-color: rgba(0,0,0,0.1);
   padding-top: 2rem;
   padding-bottom: 3rem;
   align-items: center;
@@ -14,7 +28,7 @@
   position: relative;
   max-width: 100%;
   height: auto;
-  filter: brightness(50%);
+  
 }
 .presentation h5,
 h6 {
@@ -23,8 +37,9 @@ h6 {
   color: var(--color-txt);
   display: inline-flex;
   font-family: "Roboto Condensed", sans-serif;
-  margin-left: 3rem;
+  text-align: center;
   z-index: 0;
+  font-size: 2.1rem;
 }
 .presentation h6 {
   padding-top: 2rem;
@@ -35,8 +50,8 @@ h6 {
   word-spacing: 0.1rem;
   letter-spacing: 0.1em;
   width: 50%;
-  margin-left: 4rem;
-  font-size: 1.2rem;
+  margin-bottom: 1rem ;
+  font-size: 1.5rem;
   z-index: 0;
 }
 
@@ -50,6 +65,8 @@ h6 {
   background-color: var(--background-color);
   z-index: 3;
   margin-top: 2rem;
+  
+  
 }
 .icoabout {
   max-width: 100%;
@@ -60,58 +77,38 @@ h6 {
 .description {
   display: flex;
   flex-flow: wrap;
-  height: 60rem;
   width: 100%;
   background: var(--primary-color);
-  align-content: space-around;
   text-align: center;
-  padding: 1rem;
+  
 }
-.description p {
-  font-size: 1.5rem;
-}
-.description h5 {
-  font-family: "Roboto Condensed", sans-serif;
-  letter-spacing: 0.25rem;
-  word-spacing: 0.125rem;
-  background-color: var(--background-color);
-  margin-left: 8rem;
-}
+
+
 .description h4,
 p {
   font-family: "Roboto Condensed", sans-serif;
   color: var(--background-color);
+  font-size: 2rem;
+  padding-top: 1rem;
+  padding-left: 1rem;
 }
 .flex {
-  padding-top: 1rem;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
-.entete {
-  font-family: "Roboto Condensed", sans-serif;
-  padding: 2rem 3rem;
-  width: 60rem;
-  word-spacing: 0.1rem;
-  letter-spacing: 0.1em;
-  border: var(--elementDecoration-color) 0.1875rem solid;
-  margin: 2rem;
-}
-.pourquoi h4 {
-  margin-top: 1rem;
-  font-family: "Roboto Condensed", sans-serif;
-}
 .pourqui img {
   height: 5.5rem;
   width: 5.5rem;
+  
+  margin-top: .625rem;
 }
+
 .pourquoi img {
   height: 6.3rem;
   width: 6.3rem;
 }
 button {
-  background: #efefef;
+  background: var(--primary-color);
   height: 30px;
   width: 58px;
   border-radius: 20px;
@@ -131,31 +128,62 @@ button span {
   margin-left: 0.125rem;
   transition: background 0.5s, margin-left 0.5s;
 }
-.light {
-  height: 25rem;
-  left: 5%;
-  position: absolute;
-  top: 0.125rem;
-  width: 90%;
-  z-index: 2;
-  opacity: 0;
-  transition: opacity 0.5s;
+.top button{
+  display: block;
+  margin:0 auto;
 }
-/* Animation effet machine à écrire*/
+
+.description h5 {
+  font-family: "Roboto Condensed", sans-serif;
+  letter-spacing: 0.25rem;
+  word-spacing: 0.125rem;
+  background-color: var(--background-color);
+  
+}
+
+.entete {
+  padding: 2rem 3rem;
+  max-width: 100%;
+  border: var(--elementDecoration-color) 0.1875rem solid;
+  margin: 2rem;
+}
 .column {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  text-align: center;
   align-items: center;
-  padding: 1rem;
+  /* flex-wrap: wrap; */
+  padding: 1rem; 
+  text-align: center;
+  
+  
 }
 .container,
 p {
-  max-width: 62rem;
-  margin-left: 2rem;
-  /* padding-right: -1rem; */
+  margin-left: 1rem;
+  letter-spacing: .125rem;
+  
+  
 }
+.map{
+  
+  display: flex;
+  justify-content: center;
+  border: var(--color-txt) .125rem solid;
+  padding: .625rem; 
+  flex-direction: column;
+  align-items: center;
+  background: var(--elementDecoration-color);
+}
+.map p{
+  margin-left: 0;
+  padding-bottom: 1rem;
+}
+iframe{
+  border: var(--color-txt) .125rem solid;
+}
+
+/* Animation effet machine à écrire*/
+
 #text {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
@@ -166,10 +194,11 @@ p {
   content: "";
   animation: clignote 0.8s infinite linear;
   width: 2px;
-  height: 2.5rem;
-  display: inline-block;
+  height:3vw;
   font-family: "Roboto Condensed", sans-serif;
   background: rgb(255, 255, 255);
+  display: inline-block;
+  margin-left: 5px;
 }
 
 @keyframes clignote {
@@ -191,6 +220,55 @@ p {
 .on {
   opacity: 1;
 }
-.brightness {
-  filter: brightness(100%);
+
+@media screen and (max-width:800px) { 
+.presentation ,h5,h6,h4{
+  font-size: clamp(14px,3.2vw,1.875rem)
+  
 }
+.presentation p{
+  font-size: clamp(1.125rem,3vw,1.5rem)
+}
+.top h5 {
+  font-size: clamp(1.4375rem,3.8vw,1.875rem) 
+}
+.description p,h4{
+  font-size: clamp(1.375rem,3.4vw,1.875rem)
+}
+#text,#text:after{
+  font-size: clamp(1.75rem,4.5vw,2.5rem)  
+}
+.flex{
+  display: block;
+}
+.pourqui img {
+  height: 4rem;
+  width: 4rem; 
+}
+.pourquoi img {
+  height: 4.8rem;
+  width: 4.8rem;
+}
+button {
+  height: 4vw;
+  width: 7.733vw;
+}
+button span {
+  height: 3.467vw;
+  width: 3.467vw;
+  
+}
+.light{
+  width: 100%;
+  height: 20rem;
+}
+.active span {
+ margin-left: 3.750vw;
+}
+.map p{
+  font-size: clamp(1.375rem,3.4vw,1.875rem)
+}
+
+}
+
+
