--- a/src/styles.css/presentation_jimmy.css
+++ b/src/styles.css/presentation_jimmy.css
@@ -7,41 +7,60 @@ body {
 }
 
 h1 {
-  font-size: 1.5em;
+  font-size: 1.8em;
+  letter-spacing: 0.2em;
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size: 1.6em;
 }
 
 h3 {
-  font-size: 1.1em;
+  font-size: 1.4em;
+  margin: 0.3em 0 0.2em 0;
+}
+
+h4 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 1.3em;
+  font-weight: bold;
+  color: #882018;
+  margin: 0.3em 0;
 }
 
 p {
-  font-size: 0.9em;
+  font-size: 1em;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 @media screen and (min-width: 768px) {
   h1 {
-    font-size: 3.5em;
+    font-size: 4em;
   }
 
   h2 {
-    font-size: 2.6em;
+    font-size: 3.8em;
   }
 
   h3 {
-    font-size: 1.8em;
+    font-size: 2.5em;
+  }
+
+  h4 {
+    font-size: 2.2em;
   }
 
   p {
-    font-size: 1.6em;
+    font-size: 2.2em;
   }
 }
 
 /*   CONTAIN   */
 /* ======================================================= */
+
+.header-presentation {
+  margin: 0 1.2em;
+}
 .banner-presentation {
   background: url(../img/bannerPre.jpg);
   max-width: 100%;
@@ -67,6 +86,13 @@ aside p {
   text-align: justify;
 }
 
+.presentation {
+  margin: 0 1.7em;
+}
+
+#main-content {
+  margin-top: 2em;
+}
 @media screen and (min-width: 768px) {
   .wrap {
     display: grid;
@@ -124,4 +150,11 @@ aside p {
 
 .aside .btn:hover {
   opacity: 1;
+}
+
+/*   FOOTER   */
+/* ======================================================= */
+
+.wrap {
+  margin-bottom: 4em;
 }
