Vas Y Francky, le reste arrivera plus tard

--- a/src/styles.css/coreStyles.css
+++ b/src/styles.css/coreStyles.css
@@ -1,3 +1,8 @@
+/**
+ * Auteur : AURY Gaêl
+ *   Projet FIVES
+ */
+
 /*    CORE STYLE    */
 /*=======================================================*/
 * {
