--- a/src/styles.css/presentation.css
+++ b/src/styles.css/presentation.css
@@ -1,3 +1,8 @@
+/**
+ * Auteur : AURY Gaêl
+ *   Projet FIVES
+ */
+
 /*   CORE STYLE WRAP   */
 /* ======================================================= */
 body {
@@ -7,19 +12,20 @@ body {
   display: grid;
   grid-template-columns: 4fr 2fr;
   grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 50px;
-  grid-row-gap: 30px;
+  /* grid-column-gap: 50px; */
+  /* grid-row-gap: 30px; */
   margin: 0 50px 0 50px;
+  width: 100vw;
 }
 /*   CONTAIN   */
 /* ======================================================= */
 .banner-presentation {
   grid-area: 1 / 1 / 1 / 3;
-  display: flex;
-  align-items: center;
+  /* display: flex; */
+  /* align-items: center; */
   background: url(../img/bannerPre.jpg) center/cover no-repeat;
-  background-size: 100vw;
-  background-position: 70% 50%;
+  /* background-size: 100vw; */
+  /* background-position: 50% 50%; */
   height: 50vh;
 }
 .presentation {
