--- a/src/styles.css/style.css
+++ b/src/styles.css/style.css
@@ -1,3 +1,14 @@
+/**
+ * Auteur : AURY Gaêl
+ *   Projet FIVES
+ */
+
+/*   CORE    */
+/*=======================================================*/
+section {
+  min-height: 60vh;
+}
+
 /*   HEADER    */
 /*=======================================================*/
 .banner {
@@ -20,7 +31,7 @@
 }
 .banner h1 {
   letter-spacing: 2.1rem;
-  font-size: clamp(5rem, 10vw, 20rem);
+  font-size: clamp(5rem, 8vw, 18rem);
   line-height: 1.6;
 }
 .banner p {
@@ -70,44 +81,27 @@ section {
 
 .bloc-txt p {
   display: block;
-  font-size: clamp(1.4rem, 2vw, 3rem);
+  font-size: clamp(0.999rem, 2vw, 3rem);
   /* width: 80%;  */
   line-height: 2.3rem;
   margin: 1rem 0 1rem 0;
 }
 .button {
+  text-align: center;
+  border: none;
   background-color: var(--background-card-color);
-  box-shadow: 0 5px 0 var(--primary-color);
   color: var(--background-color);
+  border-radius: 1.5625rem;
   padding: 1em 1.5em;
-  position: relative;
-
-  display: inline-block;
+  min-width: 10vw;
+  margin: 1.875rem 1.25rem 0 1.25rem;
 }
 
 /* .button {
   margin: 1.8rem;
-<<<<<<< HEAD
-
-  background-color: transparent;
-  border-radius: 0.625rem;
-  text-transform: uppercase;
-  text-align: center;
-  text-shadow: 1px 1px 1px rgb(90, 64, 7);
-  background-color: var(--background-card-color);
-  background-image: linear-gradient(
-    to top left,
-    rgba(144, 5, 5, 0.2),
-    rgba(168, 0, 0, 0.2) 30%,
-    rgba(200, 0, 0, 0)
-  );
-  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.6),
-    inset -2px -2px 3px rgba(80, 31, 31, 0.6);
-=======
   background-color: transparent;
   border-radius: 10%;
   border-color: var(--elementDecoration-color);
->>>>>>> 6705444fc8dc0eec47c3c8102e9039e389cb6650
   padding: 0.854rem;
   width: 20%;
   cursor: pointer;
@@ -211,22 +205,97 @@ section h2 {
   width: 100%;
 }
 .bloc-contact h3 {
-  margin-top: 5.75rem;
+  font-size: clamp(1.885rem, 3vw, 2.5rem);
+  margin: 3.5rem 0.3125rem 3.5rem 0.3125rem;
 }
 
-.btn {
-  display: flex;
-  justify-content: center;
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
-.btn button {
-  margin: 5rem;
-  padding: 1.4rem 3rem;
+
+.modal-content {
+  background-color: var(--background-color);
+  margin: 10vh auto;
+  padding: 1.25rem;
+  border-radius: 0.8rem;
+  width: 60%;
+}
+
+form {
+  padding: 1.5625rem;
+  margin: 1.5625;
+}
+
+input,
+textarea {
+  width: calc(100% - 18px);
+  padding: 0.625rem;
+  margin-bottom: 1.25rem;
   border: 1px solid var(--elementDecoration-color);
+  border-radius: 0.345rem;
+  outline: none;
+  resize: none;
+}
+.contact-form button {
+  width: 100%;
+  padding: 0.625rem;
+  border: none;
+  background: var(--background-card-color);
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--background-color);
+  border-radius: 0.645rem;
+}
+.bloc-contact button {
+  border: none;
+  background-color: var(--background-card-color);
+  color: var(--background-color);
+  border-radius: 25px;
+  padding: 1em 1.5em;
+  min-width: 10vw;
+  margin: 1.875rem 1.25rem 0 1.25rem;
+}
+.bloc-contact button:hover {
+  background: var(--primary-color);
+}
+
+.close {
+  color: var(--elementDecoration-color);
+  float: right;
+  font-size: 1.875rem;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: var(--primary-color);
+  cursor: pointer;
 }
 
 /*=======================================================*/
 /*============  RESPONSIVE  ================*/
 /*=======================================================*/
+
+@media (min-width: 1300px) {
+  .modal-content {
+    background-color: var(--background-color);
+    margin: 10vh auto;
+    padding: 1.25rem;
+    width: 30%;
+  }
+  input,
+  textarea {
+    resize: vertical;
+  }
+}
 
 @media (min-width: 768px) and (max-width: 1300px) {
   .nav-links {
@@ -273,8 +342,9 @@ section h2 {
     height: 70vh;
   }
   .bloc-txt p {
-    margin-top: 2.4rem;
+    margin-top: 1.8rem;
   }
+
   .bloc span {
     display: none;
   }
@@ -290,8 +360,11 @@ section h2 {
   .bloc-2 {
     display: block;
   }
+  .btn {
+    display: block;
+  }
   .btn button {
-    margin: 5rem;
+    /* margin: 5rem; */
     padding: 1rem;
     border: 1px solid var(--elementDecoration-color);
   }
