--- a/src/styles.css/presentation_jimmy.css
+++ b/src/styles.css/presentation_jimmy.css
@@ -158,3 +158,89 @@ aside p {
 .wrap {
   margin-bottom: 4em;
 }
+
+/*  CONTACT  */
+/* ======================================================= */
+
+.bloc-contact {
+  background: url(../img/halftone-light.png) center/cover no-repeat;
+  display: block;
+  text-align: center;
+  height: 30vh;
+  width: 100%;
+}
+.bloc-contact h3 {
+  font-size: clamp(1.885rem, 3vw, 2.5rem);
+  margin: 3.5rem 0.3125rem 3.5rem 0.3125rem;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: var(--background-color);
+  margin: 10vh auto;
+  padding: 1.25rem;
+  border-radius: 0.8rem;
+  width: 60%;
+}
+
+form {
+  padding: 1.5625rem;
+  margin: 1.5625;
+}
+
+input,
+textarea {
+  width: calc(100% - 18px);
+  padding: 0.625rem;
+  margin-bottom: 1.25rem;
+  border: 1px solid var(--elementDecoration-color);
+  border-radius: 0.345rem;
+  outline: none;
+  resize: none;
+}
+.contact-form button {
+  width: 100%;
+  padding: 0.625rem;
+  border: none;
+  background: var(--background-card-color);
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--background-color);
+  border-radius: 0.645rem;
+}
+.bloc-contact button {
+  border: none;
+  background-color: var(--background-card-color);
+  color: var(--background-color);
+  border-radius: 25px;
+  padding: 1em 1.5em;
+  min-width: 10vw;
+  margin: 1.875rem 1.25rem 0 1.25rem;
+}
+.bloc-contact button:hover {
+  background: var(--primary-color);
+}
+
+.close {
+  color: var(--elementDecoration-color);
+  float: right;
+  font-size: 1.875rem;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: var(--primary-color);
+  cursor: pointer;
+}
