--- a/src/styles.css/style.css
+++ b/src/styles.css/style.css
@@ -7,6 +7,12 @@
 /*=======================================================*/
 section {
   min-height: 60vh;
+  display: block;
+  padding: 3rem 0 0 0;
+}
+
+section h2 {
+  text-align: center;
 }
 
 /*   HEADER    */
@@ -44,10 +50,7 @@ section {
 
 /*   SECTION 1   */
 /*=======================================================*/
-section {
-  display: block;
-  padding: 3rem 0 0 0;
-}
+
 .bloc {
   display: flex;
   align-items: center;
@@ -81,13 +84,12 @@ section {
 
 .bloc-txt p {
   display: block;
-  font-size: clamp(0.999rem, 2vw, 3rem);
+  font-size: clamp(0.999rem, 1.8vw, 2.5rem);
   /* width: 80%;  */
-  line-height: 2.3rem;
+  line-height: 2.8rem;
   margin: 1rem 0 1rem 0;
 }
 .button {
-  text-align: center;
   border: none;
   background-color: var(--background-card-color);
   color: var(--background-color);
@@ -95,26 +97,17 @@ section {
   padding: 1em 1.5em;
   min-width: 10vw;
   margin: 1.875rem 1.25rem 0 1.25rem;
-}
-
-/* .button {
-  margin: 1.8rem;
-  background-color: transparent;
-  border-radius: 10%;
-  border-color: var(--elementDecoration-color);
-  padding: 0.854rem;
-  width: 20%;
   cursor: pointer;
 }
+.button:active {
+  transform: translateY(4px);
+}
 .button:hover {
-  background-color: transparent;
-  color: var(--primary-color);
-} */
+  background: var(--primary-color);
+}
 /*   SECTION 2   */
 /*=======================================================*/
-section h2 {
-  text-align: center;
-}
+
 .bloc-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -144,7 +137,8 @@ section h2 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 2rem;
+  height: 50vh;
+  background: url(../img/mokup.png) center/cover no-repeat;
 }
 .our-job p {
   margin: 1.25rem 0 1.25rem 0;
@@ -194,6 +188,70 @@ section h2 {
   opacity: 0;
   transition: 4s;
 }
+/*  USERCARDS  */
+/* ======================================================= */
+.cards-background {
+  background-color: var(--primary-color);
+  text-align: center;
+}
+.cards {
+  /* background-color: bisque; */
+  min-height: 50vh;
+  max-width: 80vw;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.card {
+  background-color: var(--elementDecoration-color);
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  min-height: 45vh;
+  width: 20rem;
+  border-radius: 1.25rem;
+  margin: 1.5625rem 0 1.5625rem 0;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.9375rem;
+  min-width: 20rem;
+  min-height: 45vh;
+}
+.card h5 {
+  text-align: start;
+  color: var(--primary-color);
+}
+.card h6 {
+  color: rgb(197, 60, 60);
+  font-weight: 700;
+}
+.card p {
+  font-size: clamp(1.25rem, 1vw, 2rem);
+}
+.btn-card {
+  padding: 0.68rem;
+  border: none;
+  border-radius: 1.5625rem;
+  background-color: var(--primary-color);
+
+  color: var(--background-color);
+}
+.card-img {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  width: 10.5rem;
+  height: 10.5rem;
+  background-size: cover;
+
+  border-radius: 20%;
+}
+
 /*  CONTACT  */
 /* ======================================================= */
 
