--- a/src/styles.css/aboutStyle.css
+++ b/src/styles.css/aboutStyle.css
@@ -1,5 +1,7 @@
 /*Partie about Rafael*/
-
+body{
+  
+}
 .light {
   height: 27rem;
   left: 5%;
@@ -100,7 +102,6 @@ p {
   
   margin-top: .625rem;
 }
-
 
 .pourquoi img {
   height: 6.3rem;
