--- a/src/styles.css/style.css
+++ b/src/styles.css/style.css
@@ -15,6 +15,8 @@ section h2 {
   text-align: center;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap");
+
 /*   HEADER    */
 /*=======================================================*/
 .banner {
@@ -69,7 +71,7 @@ section h2 {
 }
 
 .bloc-txt {
-  /* max-width: 70%; */
+  min-width: 50vw;
   margin: 0rem 1rem 0 8rem;
   width: 100vmin;
 }
@@ -78,12 +80,23 @@ section h2 {
   padding: 2rem;
 }
 .bloc-txt h2 {
-  font-size: clamp(2.3rem, 5vw, 3rem);
-  margin-bottom: 10vh;
+  font-size: clamp(2.2rem, 4vw, 3rem);
+  margin-bottom: 1.25rem;
+}
+
+.divider-mark {
+  background: var(--elementDecoration-color);
+  display: inline-block;
+  position: relative;
+  width: 30rem;
+  height: 3px;
+  border-radius: 1.5625rem;
+  margin: 0 0 1.875rem 18.75rem;
 }
 
 .bloc-txt p {
   display: block;
+
   font-size: clamp(0.999rem, 1.8vw, 2.5rem);
   /* width: 80%;  */
   line-height: 2.8rem;
@@ -124,6 +137,7 @@ section h2 {
   text-align: start;
   padding: auto;
 }
+
 .bloc-2 div:first-child {
   grid-area: 4 / 1 / 3 / 2;
 }
@@ -196,7 +210,7 @@ section h2 {
 }
 .cards {
   /* background-color: bisque; */
-  min-height: 50vh;
+  min-height: 40vh;
   max-width: 80vw;
   margin: auto;
   display: flex;
@@ -205,51 +219,88 @@ section h2 {
   flex-wrap: wrap;
   flex-direction: row;
 }
+
 .card {
-  background-color: var(--elementDecoration-color);
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
-    rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  min-height: 45vh;
+  background-color: var(--background-color);
   width: 20rem;
-  border-radius: 1.25rem;
-  margin: 1.5625rem 0 1.5625rem 0;
-}
-.card-body {
+  border-radius: 1.5625rem;
+  background-color: var(background-color);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  padding: 0.9375rem;
-  min-width: 20rem;
-  min-height: 45vh;
+  justify-content: center;
+  margin: 2rem 0;
+  box-shadow: 0.5rem 0.5rem 3rem rgba(0, 0, 0, 0.2);
 }
+
 .card h5 {
-  text-align: start;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: 2.5rem;
   color: var(--primary-color);
+  margin: 1.5rem 0;
 }
+
 .card h6 {
   color: rgb(197, 60, 60);
   font-weight: 700;
 }
-.card p {
-  font-size: clamp(1.25rem, 1vw, 2rem);
-}
-.btn-card {
-  padding: 0.68rem;
-  border: none;
-  border-radius: 1.5625rem;
-  background-color: var(--primary-color);
-
+.cards-background h3 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 400;
   color: var(--background-color);
 }
-.card-img {
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
-    rgba(0, 0, 0, 0.22) 0px 15px 12px;
-  width: 10.5rem;
-  height: 10.5rem;
-  background-size: cover;
+.cards-background p {
+  font-size: clamp(1.25rem, 1vw, 2rem);
+  padding: 1.5625rem;
+}
 
-  border-radius: 20%;
+.card .btn-card {
+  padding: 0.625rem 1.5rem;
+  background-color: var(--primary-color);
+  border-radius: 2rem;
+  margin: 1rem 0;
+  text-transform: uppercase;
+  color: var(--background-color);
+  font-size: 0.625rem;
+  transition: all 0.5s;
+}
+.card .btn-card:hover {
+  transform: translateY(-2px);
+  box-shadow: 0.5rem 0.5rem 0.2rem rgba(170, 128, 12, 0.2);
+}
+.card .btn-card:active {
+  transform: translateY(0);
+  box-shadow: none;
+}
+img.background-img {
+  border-radius: 1.5625rem;
+  width: 100%;
+  height: 12rem;
+  object-fit: cover;
+  clip-path: polygon(0 0, 100% 0, 100% 59%, 0% 100%);
+  z-index: 1;
+}
+img.card-img {
+  width: 15rem;
+  height: 15rem;
+  object-fit: cover;
+  position: relative;
+  border-radius: 50%;
+  margin-top: -10rem;
+  z-index: 9999;
+  border: 1rem solid var(--background-color);
+  box-shadow: 0.5rem 0.5rem 3rem rgba(0, 0, 0, 0.2);
+}
+.social-media {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 2rem 0;
+  margin-top: 1.5rem;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 /*  CONTACT  */
@@ -262,7 +313,7 @@ section h2 {
   height: 30vh;
   width: 100%;
 }
-.bloc-contact h3 {
+.bloc-contact h2 {
   font-size: clamp(1.885rem, 3vw, 2.5rem);
   margin: 3.5rem 0.3125rem 3.5rem 0.3125rem;
 }
@@ -375,6 +426,7 @@ textarea {
 @media screen and (max-width: 768px) {
   section {
     padding: 0;
+    min-height: 80vh;
   }
   .banner {
     max-height: 75vh;
@@ -390,7 +442,7 @@ textarea {
   }
 
   .bloc h2 {
-    margin: 3.75rem 0 3.85rem 0;
+    margin: 2.75rem 0 0.625rem 0;
     color: var(--overlay-txt-color);
   }
   .bloc-txt {
@@ -413,6 +465,11 @@ textarea {
     width: 100vmin;
 
     height: 70vh;
+  }
+  .divider-mark {
+    position: relative;
+    margin: 0;
+    width: 3.75rem;
   }
 
   .bloc-2 {
