--- a/src/styles.css/style.css
+++ b/src/styles.css/style.css
@@ -247,8 +247,10 @@ section h2 {
 }
 .cards-background h3 {
   font-family: "Roboto Condensed", sans-serif;
+  font-size: clamp(1.9rem, 2vw, 2.5rem);
   font-weight: 400;
   color: var(--background-color);
+  padding: 0.625rem;
 }
 .cards-background p {
   font-size: clamp(1.25rem, 1vw, 2rem);
@@ -276,20 +278,20 @@ section h2 {
 img.background-img {
   border-radius: 1.5625rem;
   width: 100%;
-  height: 12rem;
+  height: 14rem;
   object-fit: cover;
   clip-path: polygon(0 0, 100% 0, 100% 59%, 0% 100%);
   z-index: 1;
 }
 img.card-img {
-  width: 15rem;
-  height: 15rem;
+  width: 12rem;
+  height: 12rem;
   object-fit: cover;
   position: relative;
   border-radius: 50%;
   margin-top: -10rem;
   z-index: 9999;
-  border: 1rem solid var(--background-color);
+  border: 0.787rem solid var(--background-color);
   box-shadow: 0.5rem 0.5rem 3rem rgba(0, 0, 0, 0.2);
 }
 .social-media {
@@ -305,7 +307,10 @@ img.card-img {
 
 /*  CONTACT  */
 /* ======================================================= */
-
+.contact {
+  display: flex;
+  align-content: center;
+}
 .bloc-contact {
   background: url(../img/halftone-light.png) center/cover no-repeat;
   display: block;
@@ -471,7 +476,12 @@ textarea {
     margin: 0;
     width: 3.75rem;
   }
-
+  .parallax {
+    height: 80vh;
+  }
+  #goIn {
+    height: 80vh;
+  }
   .bloc-2 {
     display: block;
   }
